buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'org.springframework.boot' version '3.2.3'
    id 'io.spring.dependency-management' version '1.1.4'
    id 'java'
    id "io.sentry.jvm.gradle" version "3.14.0"
}

group = 'com.daiken'
version = '0.3.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
    mavenCentral()
    maven { url "https://oss.jfrog.org/artifactory/oss-snapshot-local" }
    maven { url "https://oss.jfrog.org/artifactory/oss-snapshot-local" }
}

sentry {
    // Generates a JVM (Java, Kotlin, etc.) source bundle and uploads your source code to Sentry.
    // This enables source context, allowing you to see your source
    // code as part of your stack traces in Sentry.
    includeSourceContext = true

    org = "daiken"
    projectName = "workout-progress-spring"
    authToken = System.getenv("SENTRY_AUTH_TOKEN")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Lombok
    implementation 'org.projectlombok:lombok:1.18.32'
    annotationProcessor 'org.projectlombok:lombok:1.18.32'

    // Security
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation "org.springframework.security:spring-security-web"
    implementation "org.springframework.security:spring-security-config"

    // Auth0 JWT authorization
    implementation 'com.auth0:jwks-rsa:0.21.1'
    implementation 'com.auth0:java-jwt:3.19.2'

    // Guava
    implementation('com.google.guava:guava:31.1-jre')

    // Friendly ID
    implementation 'com.devskiller.friendly-id:friendly-id-spring-boot-starter:1.1.0'

    // Mongo
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Graphql
    implementation 'com.graphql-java-kickstart:graphql-spring-boot-starter:15.1.0'
    implementation 'com.graphql-java-kickstart:graphql-java-tools:13.1.1'
    implementation("com.tailrocks.graphql:graphql-datetime-spring-boot-starter:6.0.0")
    testImplementation 'junit:junit:4.13.1'
    runtimeOnly 'com.graphql-java-kickstart:graphql-spring-boot-starter:15.1.0'

    // AWS
    implementation platform('software.amazon.awssdk:bom:2.17.196')
    implementation 'software.amazon.awssdk:auth'
    implementation 'software.amazon.awssdk:cognitoidentityprovider'
    implementation 'software.amazon.awssdk:regions'
    implementation 'software.amazon.awssdk:sdk-core'

    // testing facilities
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'com.graphql-java-kickstart:graphql-spring-boot-starter-test:15.1.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
